--- a/index.html
+++ b/index.html
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="world moving at pacy rate during this pandemic so learn SEO today and start earning money">
+    <meta name="keywords" content="seo, search, search seo, learn seo ,seo 2021">
+    <meta name="author" content="lalu prasad yadav">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Document</title>
 </head>
-<body>
-    <h1>books to ready</h1>
-    <h2>books to ready</h2>
-    <h3>books to ready</h3>
-    <h4>books to ready</h4>
-    <h5>books to ready</h5>
-    <h6>books to ready</h6>
-    <p>there are lot of books to read and i want to read each of them</p>
-    <p></p>
-    <hr>
-<!--example of absolute link-->
-    <a href="https://google.co.in">click here to go to google</a>
-    <!-- example of relative link -->
-    <br>
-    <a href="chapter_1.html">click here to go to chapter 1</a>
-    <!-- image tag -->
-    <!--example of absolute link-->
-    <hr>
-     <img src="https://images.unsplash.com/photo-1606787364406-a3cdf06c6d0c?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="girl image" width="400px" height="400">
-     <!-- example of relative link -->
-    <br>
-     <img src="light.jpg" alt="girl image" width="400px" height="400">
-     <!-- bold italic and underline tags -->
-     <hr>
-     <b>this is bold</b>
-     <br>
-     <i>this is italic</i>
-     <br>
-     <u>this is underline tag</u>
-     <!-- subscript and superscript -->
-     <p>CO<sub>2</sub></p>
-     <P>a<sup>2</sub> +bx + c </P>
 
+<body>
+    <header>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+    </header>
+    <h1>Hello! this is Abdul Kalam Mansoor</h1>
+    <p>I am a Computer science engineer currently pursuing my BE on Chandigarh University</p>
+    <hr>
+    <a href="https://www.facebook.com/profile.php?id=100037974244442">
+    <img src="facebook.png" alt="no icon" width="30px" height="30"></a>
+    <a href="https://www.instagram.com/abdul_kalam2000/">
+    <img src="instagram.png" alt="no icon" width="28px" height="30"></a> &nbsp;
+    <a href="https://www.linkedin.com/in/abdul-kalam-mansoor-a258651bb/">
+    <img src="linkedin.png" alt="no icon" width="28px" height="30"></a>
+    <hr>
+    
+   <footer>
+    All right reseverd of this page belongs to AKMansoor©
+   </footer>
 </body>
+
 </html>
