--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="seo, search, search seo, learn seo ,seo 2021">
     <meta name="author" content="lalu prasad yadav">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>Code! Abdul</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <li>About</li>
         <li>Contact</li>
     </header>
-    <h1>Hello! this is Abdul Kalam Mansoor</h1>
+    <h1>Hello! This is Abdul Kalam Mansoor</h1>
     <p>I am a Computer science engineer currently pursuing my BE on Chandigarh University</p>
     <hr>
     <a href="https://www.facebook.com/profile.php?id=100037974244442">
@@ -32,7 +32,7 @@
     <hr>
     
    <footer>
-    All right reseverd of this page belongs to AKMansoor©
+    All right reserved of this page belongs to AKMansoor©
    </footer>
 </body>
 
