--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="world moving at pacy rate during this pandemic so learn SEO today and start earning money">
-    <meta name="keywords" content="seo, search, search seo, learn seo ,seo 2021">
-    <meta name="author" content="lalu prasad yadav">
+        content="Become a full stack developer learning coding from abdul">
+    <meta name="keywords" content="akmansoor, mansoor, abdulmansoor, abdulkalam, abdulkmansoor,abdul, kalam">
+    <meta name="author" content="Abdul Kalam mansoor">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Code! Abdul</title>
 </head>
@@ -21,7 +21,7 @@
         <li>Contact</li>
     </header>
     <h1>Hello! This is Abdul Kalam Mansoor</h1>
-    <p>I am a Computer science engineer currently pursuing my BE on Chandigarh University</p>
+    <p>I am a Computer science engineering student currently pursuing my BE on Chandigarh University</p>
     <hr>
     <a href="https://www.facebook.com/profile.php?id=100037974244442">
     <img src="facebook.png" alt="no icon" width="30px" height="30"></a>
@@ -32,7 +32,7 @@
     <hr>
     
    <footer>
-    All right reserved of this page belongs to AKMansoor©
+    All right reserved to AKMansoor©
    </footer>
 </body>
 
