--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="akmansoor, mansoor, abdulmansoor, abdulkalam, abdulkmansoor,abdul, kalam">
   <meta name="author" content="Abdul Kalam mansoor">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="styles.css">
       <title>AK Mansoor</title>
 </head>
 <body>
